// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries and Mutations Testing creates a schedule 1`] = `
Object {
  "data": Object {
    "createSchedule": Array [
      Object {
        "daysOfTheWeek": Array [
          1,
          4,
        ],
        "endTime": "19:00:00",
        "startTime": "18:00:00",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing deletes a schedule 1`] = `
Object {
  "data": Object {
    "deleteSchedules": Array [
      Object {
        "daysOfTheWeek": Array [
          1,
          3,
          5,
        ],
        "endTime": "11:15:00",
        "startTime": "09:30:00",
      },
      Object {
        "daysOfTheWeek": Array [
          1,
          2,
          3,
        ],
        "endTime": "11:00:00",
        "startTime": "10:00:00",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing fetches a schedule 1`] = `
Object {
  "data": Object {
    "getSchedule": Object {
      "daysOfTheWeek": Array [
        1,
        3,
        5,
      ],
      "endTime": "21:30:00",
      "startTime": "14:35:00",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing updates a schedule 1`] = `
Object {
  "data": Object {
    "updateSchedule": Object {
      "daysOfTheWeek": Array [
        1,
        2,
        3,
      ],
      "endTime": "11:00:00",
      "startTime": "10:00:00",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries and Mutations Testing upserts a schedule 1`] = `
Object {
  "data": Object {
    "upsertSchedule": Array [
      Object {
        "daysOfTheWeek": Array [
          1,
          4,
        ],
        "endTime": "14:00:00",
        "startTime": "13:00:00",
      },
      Object {
        "daysOfTheWeek": Array [
          1,
          4,
        ],
        "endTime": "14:00:00",
        "startTime": "13:00:00",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
